
11. Profiel gegevens: font-weight
    Stylesheet aangepast.

12. Whitespace tussen knoppen
    Stylesheet aangepast.

13. Persoonlijke gegevens aanpassen: kleuren knoppen aanpassen
    TODO: classes in HTML aanpassen: red wordt blue en vice versa

14. Persoonlijke gegevens aanpassen: opslaan en annuleren even breed
    Zie 10.: zou aangepast moeten zijn (nog niet getest)

15. Wijzig wachtwoord: kleuren knoppen aanpassen
    TODO: classes in HTML aanpassen: red wordt blue en vice versa

16. Voeg lidmaatschap toe: kleuren knoppen aanpassen
    TODO: classes in HTML aanpassen: red wordt blue en vice versa

17. Voeg lidmaatschap toe - ruimte tussen knoppen: Stylesheet aangepast.
    Icoon van de stappen wordt afgekapt: uncomment de lijn met <li class="step-0"> - is dan uniform met registratie

18. Stappen nu ook met pijltjes op desktop/tablet - idem als smartphone; positionering TBD! Stylesheet aangepast.

19. Uitleenhistoriek witruimte onderaan
    TODO

20. Detail link
    TODO (combinatie met javascript)

21. Verwijder lidmaatschap - TODO

22. Voeg lidmaatschap toe - TODO

23. "Te laat": geen link
    Zie bibliotheek-2.html - regel 113. <span class="late red"> ipv <a href="...">. Stylesheet aangepast.
    
24. Kleur boodschap aanpassen: <div class="message info"> ipv <div class="message error">.
    Openklapbare tekst - TODO

25. TODO (snap het niet)

26. "Ga naar uitleningen en reserveringen" -> tekst aanpassen naar "Ga naar uitleningen", dan wel 1 regel.

27. "Voorwaarden" pagina
    Zie voorwaarden.html in git repository. <div class="grid-md-6 alpha omega"> mag weg. Stylesheet aangepast voor 
    achtergrondkleur.

28. TODO

29. Stappen bovenaan? Was dat niet nog TBD

30. TODO (snap het niet)

31. TODO (snap het niet)

----------------------------------------------------------------

24.06

- footer: HTML in bibliotheek-2.html en stylesheet aangepast
- stappen bovenaan de pagina: stylesheet aangepast; zie registreer-2.html regel 27-36. Regels 232-235 mogen weg.