@@ -38,6 +38,16 @@
   <div class="container">
 	  <h1 class="title">Bibliotheek Londerzeel</h1>
 	  <div class="row">
+	    <div class="col-md-3"></div>
+	    <div class="col-md-9">
+        <section class="bib-details">
+          <a target="_blank" href="http://www.ieper.be">Website</a>
+          <a target="_blank" href="http://ieper.bibliotheek.be">Catalogus</a>
+          <span>Vanhove, Jean-Luc Noel - Lidmaatschap geldig tot: 13/12/2014</span>
+        </section>
+	    </div>
+	  </div>
+	  <div class="row">
 	    <div class="col-md-3 sidebar-first">
 	      <div class="icon resp-true"><a href="#">Menu</a></div>
 	      <div class="inner">
@@ -86,11 +96,11 @@
 	  
 	    <div class="col-md-9 main-content">
 	      <div class="inner">
-	        <section class="bib-details">
+<!--	        <section class="bib-details">
 	          <a target="_blank" href="http://www.ieper.be">Website</a>
 	          <a target="_blank" href="http://ieper.bibliotheek.be">Catalogus</a>
 	          <span>Vanhove, Jean-Luc Noel - Lidmaatschap geldig tot: 13/12/2014</span>
-	        </section>
+	        </section> -->
 	        <section class="messages">
 	          <div class="message error">
 	          Momenteel gebruikt je bibliotheek het e-mailadres <a href="mailto:eline.de.neef@oost-vlaanderen.be">eline.de.neef@oost-vlaanderen.be</a> om je berichten te sturen bv. als je uitleentermijn bijna verstreken is. Deze div gebruikt class="error".
